--- a/IDE/IDE.csproj
+++ b/IDE/IDE.csproj
@@ -438,6 +438,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Main\LightEdit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Main\LightEdit.Designer.cs">
+      <DependentUpon>LightEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\CodeSenseType.cs" />
     <Compile Include="Help\CodeSettings.cs">
       <SubType>Form</SubType>
@@ -511,6 +517,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Help\LicenseAndCopyrights.resx">
       <DependentUpon>LicenseAndCopyrights.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Main\LightEdit.resx">
+      <DependentUpon>LightEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Main\Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
