--- a/packages.config
+++ b/packages.config
@@ -60,9 +60,9 @@
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Nerdbank.Streams" version="2.8.57" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
-  <package id="ProgressBar" version="1.0.10" targetFramework="net48" />
-  <package id="SharpConfig" version="3.2.9.1" targetFramework="net48" />
   <package id="StreamJsonRpc" version="2.12.27" targetFramework="net48" />
+  <package id="SunnyUI" version="3.3.2.1" targetFramework="net48" />
+  <package id="SunnyUI.Common" version="3.3.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
