--- a/IDE/IDE.csproj
+++ b/IDE/IDE.csproj
@@ -15,6 +15,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -27,7 +28,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -60,7 +60,7 @@
     <ApplicationManifest>IDE.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -75,14 +75,8 @@
     <Reference Include="Azure.Identity, Version=1.6.0.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
       <HintPath>packages\Azure.Identity.1.6.0\lib\netstandard2.0\Azure.Identity.dll</HintPath>
     </Reference>
-    <Reference Include="envdte, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\envdte.17.3.32804.24\lib\net472\envdte.dll</HintPath>
-    </Reference>
-    <Reference Include="envdte80, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\envdte80.17.3.32804.24\lib\net472\envdte80.dll</HintPath>
-    </Reference>
-    <Reference Include="ICSharpCode.AvalonEdit, Version=6.2.0.78, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
-      <HintPath>packages\AvalonEdit.6.2.0.78\lib\net462\ICSharpCode.AvalonEdit.dll</HintPath>
+    <Reference Include="ICSharpCode.AvalonEdit, Version=6.3.0.90, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
+      <HintPath>packages\AvalonEdit.6.3.0.90\lib\net462\ICSharpCode.AvalonEdit.dll</HintPath>
     </Reference>
     <Reference Include="MessagePack, Version=2.3.0.0, Culture=neutral, PublicKeyToken=b4a0369545f0a1be, processorArchitecture=MSIL">
       <HintPath>packages\MessagePack.2.3.85\lib\netstandard2.0\MessagePack.dll</HintPath>
@@ -223,9 +217,6 @@
       <HintPath>packages\Microsoft.SqlServer.SqlManagementObjects.170.8.0\lib\net462\Microsoft.SqlServer.WmiEnum.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
-    <Reference Include="Microsoft.VisualStudio.ComponentModelHost, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.VisualStudio.ComponentModelHost.17.3.198\lib\net472\Microsoft.VisualStudio.ComponentModelHost.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.CoreUtility, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.CoreUtility.17.3.198\lib\net472\Microsoft.VisualStudio.CoreUtility.dll</HintPath>
     </Reference>
@@ -235,22 +226,12 @@
     <Reference Include="Microsoft.VisualStudio.ImageCatalog, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.ImageCatalog.17.3.32804.24\lib\net472\Microsoft.VisualStudio.ImageCatalog.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.VisualStudio.Imaging, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.VisualStudio.Imaging.17.3.32804.24\lib\net472\Microsoft.VisualStudio.Imaging.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime.17.3.32803.143\lib\net472\Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Interop, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.Interop.17.3.32804.24\lib\net472\Microsoft.VisualStudio.Interop.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.Language, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.VisualStudio.Language.17.3.198\lib\net472\Microsoft.VisualStudio.Language.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.ProjectAggregator, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.VisualStudio.ProjectAggregator.17.3.32803.143\lib\net472\Microsoft.VisualStudio.ProjectAggregator.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.RemoteControl, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.RemoteControl.16.3.44\lib\net45\Microsoft.VisualStudio.RemoteControl.dll</HintPath>
@@ -261,9 +242,6 @@
     <Reference Include="Microsoft.VisualStudio.Setup.Configuration.Interop, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.Setup.Configuration.Interop.3.0.4492\lib\net35\Microsoft.VisualStudio.Setup.Configuration.Interop.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="Microsoft.VisualStudio.Shell.15.0, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>packages\Microsoft.VisualStudio.Shell.15.0.17.3.32804.24\lib\net472\Microsoft.VisualStudio.Shell.15.0.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.Shell.Framework, Version=17.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.VisualStudio.Shell.Framework.17.3.32804.24\lib\net472\Microsoft.VisualStudio.Shell.Framework.dll</HintPath>
@@ -310,11 +288,11 @@
     <Reference Include="StreamJsonRpc, Version=2.12.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\StreamJsonRpc.2.12.27\lib\netstandard2.0\StreamJsonRpc.dll</HintPath>
     </Reference>
-    <Reference Include="SunnyUI, Version=3.3.2.1, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb, processorArchitecture=MSIL">
-      <HintPath>packages\SunnyUI.3.3.2.1\lib\net472\SunnyUI.dll</HintPath>
+    <Reference Include="SunnyUI, Version=3.4.1.0, Culture=neutral, PublicKeyToken=27d7d2e821d97aeb, processorArchitecture=MSIL">
+      <HintPath>packages\SunnyUI.3.4.1\lib\net472\SunnyUI.dll</HintPath>
     </Reference>
-    <Reference Include="SunnyUI.Common, Version=3.3.2.0, Culture=neutral, PublicKeyToken=5a271fb7ba597231, processorArchitecture=MSIL">
-      <HintPath>packages\SunnyUI.Common.3.3.2\lib\net472\SunnyUI.Common.dll</HintPath>
+    <Reference Include="SunnyUI.Common, Version=3.4.0.0, Culture=neutral, PublicKeyToken=5a271fb7ba597231, processorArchitecture=MSIL">
+      <HintPath>packages\SunnyUI.Common.3.4.0\lib\net472\SunnyUI.Common.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -464,6 +442,21 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Help\CustomSettings.Initializer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Help\LicenseAndCopyrights.Initializer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Help\Thanks.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Help\Thanks.Designer.cs">
+      <DependentUpon>Thanks.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Help\Thanks.Initializer.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Init\Initializer.cs" />
     <Compile Include="Main\LightEdit.cs">
       <SubType>Form</SubType>
@@ -533,6 +526,12 @@
     </Compile>
     <Compile Include="Utils\RYCBCodeSense.cs" />
     <Compile Include="Utils\SettingsHandler.cs" />
+    <Compile Include="Utils\TBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Utils\TBox.Designer.cs">
+      <DependentUpon>TBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Utils\TextEnterBox.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -554,6 +553,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Help\CustomSettings.resx">
       <DependentUpon>CustomSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Help\Thanks.resx">
+      <DependentUpon>Thanks.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Init\Entry.resx">
       <DependentUpon>Entry.cs</DependentUpon>
@@ -580,6 +582,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Utils\NewFile.resx">
       <DependentUpon>NewFile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Utils\TBox.resx">
+      <DependentUpon>TBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Utils\TextEnterBox.resx">
       <DependentUpon>TextEnterBox.cs</DependentUpon>
@@ -689,6 +694,9 @@
     </Compile>
     <EmbeddedResource Include="Python.xshd" />
     <EmbeddedResource Include="Py-CN.xshd" />
+    <Compile Include="Utils\NewFile.Initializer.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -748,6 +756,36 @@
     <None Include="Resources\Update-normal.png" />
     <Content Include="Init\FirstBoot\InstallFont.vbs" />
     <None Include="Resources\IDE_splash_new.png" />
+    <None Include="Resources\ender_pearl.png" />
+    <None Include="Resources\steve.gif" />
+    <None Include="Resources\ender_pearl1.png" />
+    <None Include="Resources\notch_square.gif" />
+    <None Include="Resources\Linux.ico" />
+    <None Include="Resources\Update-can_update.ico" />
+    <None Include="Resources\IDE_ico%281024x%291.png" />
+    <None Include="Resources\ingot.png" />
+    <None Include="Resources\Android.png" />
+    <None Include="Resources\google.png" />
+    <None Include="Resources\azure.png" />
+    <None Include="Resources\Google-Translate%28Small%29%28ICON%29.png.ico" />
+    <None Include="Resources\Microsoft徽标.png" />
+    <None Include="Resources\Visual Studio.ico" />
+    <None Include="Resources\Windows徽标%2811版%29.png" />
+    <None Include="Resources\Windows徽标%2810版%29.png" />
+    <None Include="Resources\Mail_light.png" />
+    <None Include="Resources\docx.png" />
+    <None Include="Resources\Settings.png" />
+    <None Include="Resources\AppIcon.altform-unplated_targetsize-256.png" />
+    <None Include="Resources\Bug.png" />
+    <None Include="Resources\regedit.ico" />
+    <None Include="Resources\1.ico" />
+    <None Include="Resources\Java.ico" />
+    <None Include="Resources\Mojang.jpg" />
+    <None Include="Resources\30856_48_1682238911.png" />
+    <None Include="Resources\donate.png" />
+    <None Include="Resources\iconundo%402x.png" />
+    <None Include="Resources\iconredo%402x.png" />
+    <None Include="Resources\select.png" />
     <Content Include="语法说明.html" />
     <None Include="Resources\help.png" />
     <None Include="Resources\Google Translate%28Large%29.png" />
