--- a/packages.config
+++ b/packages.config
@@ -4,12 +4,19 @@
   <package id="AvalonEdit.Sample" version="5.0.3" targetFramework="net48" />
   <package id="Azure.Core" version="1.24.0" targetFramework="net48" />
   <package id="Azure.Identity" version="1.6.0" targetFramework="net48" />
+  <package id="Humanizer.Core" version="2.2.0" targetFramework="net48" />
   <package id="MessagePack" version="2.3.85" targetFramework="net48" />
   <package id="MessagePack.Annotations" version="2.3.85" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
+  <package id="MicroCom.Runtime" version="0.11.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Build.Framework" version="17.1.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.BannedApiAnalyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.10.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.10.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.10.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.10.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient" version="5.0.1" targetFramework="net48" />
   <package id="Microsoft.Data.SqlClient.SNI" version="5.0.1" targetFramework="net48" />
@@ -23,6 +30,7 @@
   <package id="Microsoft.IdentityModel.Tokens" version="6.21.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net48" />
+  <package id="Microsoft.PinYinConverter" version="1.0.0" targetFramework="net48" />
   <package id="Microsoft.ServiceHub.Analyzers" version="4.0.2048" targetFramework="net48" />
   <package id="Microsoft.ServiceHub.Client" version="4.0.2048" targetFramework="net48" />
   <package id="Microsoft.ServiceHub.Framework" version="4.0.2048" targetFramework="net48" />
@@ -58,6 +66,7 @@
   <package id="SunnyUI.Common" version="3.4.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
+  <package id="System.Collections.NonGeneric" version="4.3.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.ComponentModel.Composition" version="6.0.0" targetFramework="net48" />
   <package id="System.Composition" version="6.0.0" targetFramework="net48" />
@@ -78,6 +87,7 @@
   <package id="System.Private.Uri" version="4.3.2" targetFramework="net48" />
   <package id="System.Reflection.Emit" version="4.6.0" targetFramework="net48" />
   <package id="System.Reflection.Emit.Lightweight" version="4.6.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
@@ -89,6 +99,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="5.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Json" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.AccessControl" version="6.0.0" targetFramework="net48" />
